[FEA] add logo and render

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Waiting Queue</title>
-    <link rel="shortcut icon" href="/resources/images/tf-logo.jpg" />
+    <link rel="shortcut icon" href="/resources/images/tf-logo.svp" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
