[FIX] add notif

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -55,5 +55,6 @@
     <div id="root">
       <div class="initial__loading"></div>
     </div>
+    <!-- <script src="sw.js"></script> -->
   </body>
 </html>
